Added chatbot URL and sidebar link for AI Assistant
Updated the URL configuration to include the chatbot app and added a corresponding link in the sidebar for easy access to the AI Assistant feature.

--- a/kidlink/templates/sidebar.html
+++ b/kidlink/templates/sidebar.html
@@ -91,6 +91,11 @@
             <i class="fas fa-users"></i> Youth Institutes
           </a>
         </li>
+        <li class="{% if request.path == '/chat' %}active{% endif %}">
+          <a href="{% url 'chatbot' %}">
+            <i class="fas fa-robot"></i> AI Assistant
+          </a>
+        </li>
       </ul>
 
       <ul class="sidebar-menu bottom">
